stock ent 初始化数据库
